--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ url_second="/WhatsApp Business/Media/.Statuses"
 downloadUrl="/status/"
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
