--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS" />
 
     <application
-        android:name=".Util.YouApplication"
+        android:name="com.abahstudio.status.Util.YouApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true">
-        <activity android:name=".Activity.SplashScreen"
+        <activity android:name="com.abahstudio.status.Activity.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.WelcomeActivity" />
-        <activity android:name=".Activity.MainActivity" />
-        <activity android:name=".Activity.PrivacyPolicy" />
-        <activity android:name=".Activity.ShowItem" />
-        <activity android:name=".Activity.VideoPlayer" />
+        <activity android:name="com.abahstudio.status.Activity.WelcomeActivity" />
+        <activity android:name="com.abahstudio.status.Activity.MainActivity" />
+        <activity android:name="com.abahstudio.status.Activity.PrivacyPolicy" />
+        <activity android:name="com.abahstudio.status.Activity.ShowItem" />
+        <activity android:name="com.abahstudio.status.Activity.VideoPlayer" />
 
         <!-- optional (needed if default theme has no action bar) -->
         <activity
